[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gui_builder"
version = "1.3.2"
description = "A declarative GUI framework for Python built on wxPython that makes creating complex interfaces simple and maintainable"
readme = "README.md"
license = {file = "license.txt"}
requires-python = ">=3.7"
authors = [
    {name = "Accessible Apps", email = "q.alpha@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Operating System :: OS Independent",
]
dependencies = [
    "wxPython>=4.1.0",
    "six",
]

[project.urls]
Homepage = "https://github.com/accessibleapps/gui_builder"
Issues = "https://github.com/accessibleapps/gui_builder/issues"
Repository = "https://github.com/accessibleapps/gui_builder.git"
